# hashers

./: .gitignore  Cargo.toml  README.md
benches/: benches.rs
examples/: anagrams-hashmap.rs  chi2.rs  kolmogorov-smirnov.rs
src/: fibonacci.rs  lib.rs  oz.rs  pigeon.rs
src/jenkins/: mod.rs  spooky_hash.rs
