[package]
name = "hashers"
version = "1.0.1"
authors = ["Tommy M. McGuire <mcguire@crsr.net>"]
description = "A collection of non-cryptographic hashing algorithms for Rust"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/tmmcguire/hashers"
repository = "https://github.com/tmmcguire/hashers"
readme = "README.md"
keywords = [ "hash", "Hasher" ]
categories = [ "algorithms" ]

[dependencies]
fxhash = "0.2.1"

[dev-dependencies]
rand = "0.5.4"

[profile.bench]
opt-level = 3
